tests/unit-fail-compilation/j083a.c.ref
j083a.c:2:7: error: Invalid initializer for aggregate type.
  Undefined behavior (UB-CDI3). See C11 sec. 6.7.9:16, J.2:1 item 83
Translation failed (config dumped). Run kcc -d j083a.c to see commands run.
