tests/unit-fail-compilation/j083a.c
int main(void) {
      int a[] = 1;
      return a[0];
}
